src/objects/Freshbooks_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Freshbooks Projects</relationshipLabel>
        <relationshipName>Freshbooks_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Project_ID__c</fullName>
        <externalId>true</externalId>
        <label>Freshbooks Project ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hour_Budget__c</fullName>
        <label>Hour Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Freshbooks Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freshbooks Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>